Resized table columns to better fit data.  Right aligned columns with numeric values.  Column URLs are now links.  Updated refresh interval config to be specified in seconds rather than milliseconds.  Default interval is now 30 seconds rather than 15.  Pulled totals column out of table and made dedicated column for this data.  This is cleaner and fixes improper table sorting issues.

--- a/includes/style/style.css
+++ b/includes/style/style.css
@@ -4,6 +4,15 @@ body {
     color: #333;
 }
 
+a {
+    color: #4280BD;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 #divMainWrapper {
     width: 940px;
     padding: 10px 5px 10px 5px;
@@ -59,17 +68,23 @@ body {
     -webkit-border-radius: 5px;
 }
 
-#tblVisitors {
+table {
+    table-layout: fixed;
     border-collapse: collapse;
+    width: 100%;
+    word-wrap: break-word;
     font-size: 20px;
 }
 
-#tblVisitors th {
-    border-bottom: #ccc 1px solid;
+table th,td {
+    padding: 5px;
+    border: #e0e0e0 1px solid;
 }
 
-#tblVisitors th,td {
-    padding: 5px;
-    border-left: #eee 1px solid;
-    border-right: #eee 1px solid;
+#divStatusBar {
+    background-color: #fff;
+    margin: 10px 5px 0 5px;
+    padding: 10px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 }
